[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=2]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Sonidos/Impacto.ogg" type="AudioStream" id=8]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
linear_damp = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -3.09058, 0 )

[node name="ImpactosSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
